Removed overflow hidden style bug

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,10 +3,6 @@
 @tailwind components;
 @tailwind utilities;
 
-body{
-  overflow: hidden;
-}
-
 * {
   box-sizing: border-box;
 }
